--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,10 @@
 * {
-  max-width: 100vw;
   font-family: "hack-font", sans-serif;
   font-size: 16px;
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body::-webkit-scrollbar {
@@ -34,18 +34,13 @@ p {
   align-items: center;
 }
 
-main {
-  max-width: 100vw;
-  height: 100vh;
-  background-color: #0D0C0C;
-}
-
 .nav {
   width: 3rem;
   height: 100vh;
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 100;
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
   background-color: #F2EC99;
@@ -153,6 +148,193 @@ main {
   }
   .nav .nav-ul .nav-li .nav-link .nav-text {
     display: none;
+  }
+}
+main {
+  max-width: 100vw;
+  height: 100vh;
+  background-color: #0D0C0C;
+}
+
+#parallax {
+  width: 100vw;
+  height: 100vh;
+  background-color: #19335E;
+  image-rendering: pixelated;
+}
+#parallax:hover .parallax-item-1 {
+  width: 200%;
+  height: 100%;
+  position: absolute;
+  top: 0vh;
+  background: url("../../assets/image/parallax/bg0SKY.png");
+  background-repeat: repeat-x;
+  background-size: 50%;
+  animation: parallax 13s linear infinite;
+  z-index: 1;
+}
+#parallax:hover .parallax-item-2 {
+  width: 200%;
+  height: 100%;
+  position: absolute;
+  top: 0vh;
+  background: url("../../assets/image/parallax/bg0moon-and-stars.png");
+  background-repeat: repeat-x;
+  background-size: 50%;
+  animation: parallax 11s linear infinite;
+  z-index: 2;
+}
+#parallax:hover .parallax-item-3 {
+  width: 200%;
+  height: 100%;
+  position: absolute;
+  top: 0vh;
+  background: url("../../assets/image/parallax/bg01.png");
+  background-repeat: repeat-x;
+  background-size: 50%;
+  animation: parallax 8s linear infinite;
+  z-index: 3;
+}
+#parallax:hover .parallax-item-4 {
+  width: 200%;
+  height: 100%;
+  position: absolute;
+  top: 0vh;
+  background: url("../..//assets/image/parallax/bg02.png");
+  background-repeat: repeat-x;
+  background-size: 50%;
+  animation: parallax 4s linear infinite;
+  z-index: 4;
+}
+#parallax .parallax-item-1 {
+  width: 200%;
+  height: 100%;
+  position: absolute;
+  top: 0vh;
+  background: url("../../assets/image/parallax/bg0SKY.png");
+  background-repeat: repeat-x;
+  background-size: 50%;
+  z-index: 1;
+}
+#parallax .parallax-item-2 {
+  width: 200%;
+  height: 100%;
+  position: absolute;
+  top: 0vh;
+  background: url("../../assets/image/parallax/bg0moon-and-stars.png");
+  background-repeat: repeat-x;
+  background-size: 50%;
+  z-index: 2;
+}
+#parallax .parallax-item-3 {
+  width: 200%;
+  height: 100%;
+  position: absolute;
+  top: 0vh;
+  background: url("../../assets/image/parallax/bg01.png");
+  background-repeat: repeat-x;
+  background-size: 50%;
+  z-index: 3;
+}
+#parallax .parallax-item-4 {
+  width: 200%;
+  height: 100%;
+  position: absolute;
+  top: 0vh;
+  background: url("../..//assets/image/parallax/bg02.png");
+  background-repeat: repeat-x;
+  background-size: 50%;
+  z-index: 4;
+}
+
+@keyframes parallax {
+  from {
+    transform: translateX(0%);
+  }
+  to {
+    transform: translateX(-50%);
+  }
+}
+@media screen and (max-width: 600px) {
+  #parallax .parallax-item-1 {
+    width: 200%;
+    height: 100%;
+    position: absolute;
+    top: 5;
+    background: url("../../assets/image/parallax/bg0SKY.png");
+    background-repeat: repeat-x;
+    background-size: 50%;
+    z-index: 1;
+  }
+  #parallax .parallax-item-2 {
+    width: 200%;
+    height: 100%;
+    position: absolute;
+    top: 5;
+    background: url("../../assets/image/parallax/bg0moon-and-stars.png");
+    background-repeat: repeat-x;
+    background-size: 50%;
+    z-index: 2;
+  }
+  #parallax .parallax-item-3 {
+    width: 200%;
+    height: 100%;
+    position: absolute;
+    top: 5;
+    background: url("../../assets/image/parallax/bg01.png");
+    background-repeat: repeat-x;
+    background-size: 50%;
+    z-index: 3;
+  }
+  #parallax .parallax-item-4 {
+    width: 200%;
+    height: 100%;
+    position: absolute;
+    top: 5;
+    background: url("../..//assets/image/parallax/bg02.png");
+    background-repeat: repeat-x;
+    background-size: 50%;
+    z-index: 4;
+  }
+  #parallax:hover .parallax-item-1 {
+    width: 200%;
+    height: 100%;
+    position: absolute;
+    top: 6;
+    background: url("../../assets/image/parallax/bg0SKY.png");
+    background-repeat: repeat-x;
+    background-size: 50%;
+    z-index: 1;
+  }
+  #parallax:hover .parallax-item-2 {
+    width: 200%;
+    height: 100%;
+    position: absolute;
+    top: 6;
+    background: url("../../assets/image/parallax/bg0moon-and-stars.png");
+    background-repeat: repeat-x;
+    background-size: 50%;
+    z-index: 2;
+  }
+  #parallax:hover .parallax-item-3 {
+    width: 200%;
+    height: 100%;
+    position: absolute;
+    top: 6;
+    background: url("../../assets/image/parallax/bg01.png");
+    background-repeat: repeat-x;
+    background-size: 50%;
+    z-index: 3;
+  }
+  #parallax:hover .parallax-item-4 {
+    width: 200%;
+    height: 100%;
+    position: absolute;
+    top: 6;
+    background: url("../..//assets/image/parallax/bg02.png");
+    background-repeat: repeat-x;
+    background-size: 50%;
+    z-index: 4;
   }
 }
 footer {
