--- a/assets/sass/_navbar.scss
+++ b/assets/sass/_navbar.scss
@@ -8,6 +8,8 @@ $transition-velocity: 300ms;
     top: 0;
     left: 0;
 
+    z-index: 100;
+
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
 
@@ -69,6 +71,7 @@ $transition-velocity: 300ms;
                     position: absolute;
                     top: 10px;
                     left: 0;
+                    //z-index: 100;
         
                     padding: 5px 8px;
             
