--- a/assets/sass/base.scss
+++ b/assets/sass/base.scss
@@ -5,7 +5,6 @@ $back-color: #0D0C0C;
 $back2-color: #262423;
 
 * {
-    max-width: 100vw;
     font-family: 'hack-font', sans-serif;
     
     font-size: 16px;
@@ -14,6 +13,7 @@ $back2-color: #262423;
     padding: 0px;
 
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -50,7 +50,7 @@ p {
 }
 
 
-@import "_main", "_navbar", "_footer";
+@import  "_navbar", "_main", "parallax", "_footer";
 
 @media screen and (max-width: 600px) {
     body {
