--- a/assets/sass/_footer.scss
+++ b/assets/sass/_footer.scss
@@ -1,9 +1,7 @@
 footer {
     height: 50vh;
-    position: sticky;
 
-    left: 0;
-    bottom: 0;
+    background-attachment: fixed;
 
     z-index: -1;
 
