--- a/assets/sass/base.scss
+++ b/assets/sass/base.scss
@@ -1,8 +1,13 @@
-$font-color: #F2EC99; 
-$font2-color: #BFB169; 
-$font3-color: #A69668; 
+$font-color: #BF56B8; 
+$font2-color: #F2E18D; 
 $back-color: #0D0C0C;
-$back2-color: #262423;
+$back2-color: #102040;
+$lighthen: #F2B8A2;
+$nighten: #30618C;
+
+
+@import  "_navbar", "_main", "_parallax", "_footer";
+
 
 * {
     font-family: 'hack-font', sans-serif;
@@ -27,6 +32,7 @@ body {
 
     &::-webkit-scrollbar-thumb {
         background-color: $font-color;
+        border-radius: 5px;
     }
 
     main, footer {
@@ -49,8 +55,6 @@ p {
     align-items: center;
 }
 
-
-@import  "_navbar", "_main", "parallax", "_footer";
 
 @media screen and (max-width: 600px) {
     body {
