--- a/assets/sass/_navbar.scss
+++ b/assets/sass/_navbar.scss
@@ -13,12 +13,15 @@ $transition-velocity: 300ms;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
 
-    background-color: $font-color;
+    background-color: transparent;
 
-    transition: width 200ms ease-in-out;
+    transition: all 200ms ease-in-out;
 
     &:hover {
         width: 5rem;
+
+        box-shadow: 4px 0px 10px rgba(255, 255, 255, 0.1);
+        background-color: rgba(0, 0, 0, 0.1);
     }
 
     .nav-ul {
@@ -32,7 +35,7 @@ $transition-velocity: 300ms;
         .nav-li {
             position: relative;
             width: 100%;
-            height: 80px;
+            height: 88px;
     
             @extend .flex-center;
     
@@ -59,9 +62,10 @@ $transition-velocity: 300ms;
             }  
     
             .nav-link {
-                height: 50px;
+                width: 100%;
+                height: 100%;
         
-                color: $back2-color;
+                color: $back-color;
                 filter: grayscale(100%) opacity(0.5);
                 @extend .flex-center;
     
@@ -69,9 +73,10 @@ $transition-velocity: 300ms;
     
                 .nav-text {
                     position: absolute;
-                    top: 10px;
+                    top: 50%;
                     left: 0;
-                    //z-index: 100;
+
+                    transform: translateY(-50%);
         
                     padding: 5px 8px;
             
@@ -92,9 +97,9 @@ $transition-velocity: 300ms;
                         height: 8px;
                         width: 8px;
                         background: $font-color;
-                        top: 40%;
+                        top: 50%;
                         left: -3px;
-                        transform: rotate(45deg);
+                        transform: translateY(-50%) rotate(45deg);
                         transition: all 3$transition-velocity cubic-bezier(0.68, -0.55, 0.265, 1.55);
                     }
                 }
@@ -123,6 +128,12 @@ $transition-velocity: 300ms;
 
         &:hover{
             width: 100%;
+
+            /* OLD */
+            box-shadow: 0px 4px 10px rgba(255, 255, 255, 0.1);
+            background-color: rgba(0, 0, 0, 0.1);
+
+            /* NEW */
         }
 
         .nav-ul {
