--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@
 .nav:hover {
   width: 5rem;
   box-shadow: 4px 0px 10px rgba(255, 255, 255, 0.1);
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(12, 11, 11, 0.55);
 }
 .nav .nav-ul {
   height: 100%;
@@ -35,9 +35,6 @@
 .nav .nav-ul .nav-li:hover {
   background-color: #0D0C0C;
 }
-.nav .nav-ul .nav-li:hover .nav-link {
-  filter: grayscale(0) opacity(1);
-}
 .nav .nav-ul .nav-li:hover .nav-link .nav-text {
   left: 6rem;
   opacity: 1;
@@ -45,14 +42,12 @@
   pointer-events: auto;
 }
 .nav .nav-ul .nav-li:hover .nav-link .nav-icon {
-  color: #BF56B8;
+  color: #bf56b8;
 }
 .nav .nav-ul .nav-li .nav-link {
   width: 100%;
   height: 100%;
   color: #0D0C0C;
-  filter: grayscale(100%) opacity(0.5);
-  transition: 300ms;
 }
 .nav .nav-ul .nav-li .nav-link .nav-text {
   position: absolute;
@@ -79,7 +74,8 @@
   transition: all 3 300ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 .nav .nav-ul .nav-li .nav-link .nav-icon {
-  color: #102040;
+  color: #5a2256;
+  transition: 300ms;
 }
 
 @media screen and (max-width: 600px) {
@@ -225,9 +221,78 @@ main {
     transform: translateX(-50%);
   }
 }
+#effects {
+  position: relative;
+  max-width: 100vw;
+  height: 100vh;
+  background-color: #102040;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+}
+#effects .effect-1 {
+  background-color: #0E1B31;
+}
+#effects .effect-2 {
+  background-color: #0D0C0C;
+}
+#effects .curve {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+#effects .curve::before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 400px;
+  height: 50%;
+  border-bottom-left-radius: 50%;
+  top: 0%;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1;
+  background-color: #0D0C0C;
+}
+#effects .curve::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 400px;
+  height: 50%;
+  border-top-right-radius: 50%;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1;
+  background-color: #0E1B31;
+}
+
+@media (max-width: 600px) {
+  #effects .curve {
+    width: 100%;
+    height: 100%;
+  }
+  #effects .curve::before {
+    width: 50%;
+    height: 20%;
+    border-top-right-radius: 0%;
+    border-top-left-radius: 50%;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+  #effects .curve::after {
+    width: 50%;
+    height: 20%;
+    border-bottom-left-radius: 0%;
+    border-bottom-right-radius: 50%;
+    top: 50%;
+    left: 0%;
+    transform: translateY(-50%);
+  }
+}
 footer {
   height: 50vh;
-  background-attachment: fixed;
+  position: sticky;
+  bottom: 0;
   z-index: -1;
   background-color: aquamarine;
 }
@@ -267,6 +332,10 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.grid, #effects {
+  display: grid;
 }
 
 @media screen and (max-width: 600px) {
