--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,7 +80,7 @@
 
 @media screen and (max-width: 600px) {
   .nav {
-    width: 100%;
+    width: 100vw;
     height: 5vh;
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
@@ -119,8 +119,6 @@
   }
 }
 main {
-  max-width: 100vw;
-  height: 100vh;
   background-color: red;
 }
 
@@ -131,6 +129,10 @@ main {
   top: 0;
 }
 
+.parallax-container {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
 .parallax-container .container-PP {
   width: 50px;
   height: 50px;
@@ -141,10 +143,6 @@ main {
   z-index: 11;
   border-radius: 50%;
   background-color: #F2E18D;
-}
-.parallax-container .container-PP label {
-  width: 100%;
-  height: 100%;
 }
 .parallax-container .container-PP label #parallax-pause {
   display: block;
@@ -160,8 +158,6 @@ main {
   height: 95%;
 }
 .parallax-container .container-PP .play-pause {
-  width: 100%;
-  height: 100%;
   position: absolute;
   top: 0;
   appearance: none;
@@ -169,8 +165,6 @@ main {
 }
 
 #parallax {
-  max-width: 100vw;
-  height: 100vh;
   image-rendering: pixelated;
   background-color: #0E1B31;
   /*&:hover {
@@ -180,37 +174,37 @@ main {
 #parallax .parallax-item-1 {
   background: url("../../assets/image/parallax/bg0sky.png") repeat-x;
   background-size: 50%;
-  z-index: 1;
+  z-index: 11;
 }
 #parallax .parallax-item-2 {
   background: url("../../assets/image/parallax/bg0moon-and-stars.png") repeat-x;
   background-size: 50%;
-  z-index: 2;
+  z-index: 12;
 }
 #parallax .parallax-item-3 {
   background: url("../../assets/image/parallax/bg01.png") repeat-x;
   background-size: 50%;
-  z-index: 3;
+  z-index: 13;
 }
 #parallax .parallax-item-4 {
   background: url("../../assets/image/parallax/bg02.png") repeat-x;
   background-size: 50%;
-  z-index: 4;
+  z-index: 14;
 }
 #parallax .parallax-item-5 {
   background: url("../../assets/image/parallax/bg03.png") repeat-x;
   background-size: 50%;
-  z-index: 5;
+  z-index: 15;
 }
 #parallax .parallax-item-6 {
   background: url("../../assets/image/parallax/bg04.png") repeat-x;
   background-size: 50%;
-  z-index: 6;
+  z-index: 16;
 }
 #parallax .parallax-item-7 {
   background: url("../../assets/image/parallax/bg05.png") repeat-x;
   background-size: 50%;
-  z-index: 7;
+  z-index: 17;
 }
 
 @keyframes parallax {
@@ -221,10 +215,18 @@ main {
     transform: translateX(-50%);
   }
 }
+@media (max-width: 600px) {
+  .configParallax, #parallax .parallax-item-1, #parallax .parallax-item-2, #parallax .parallax-item-3, #parallax .parallax-item-4, #parallax .parallax-item-5, #parallax .parallax-item-6, #parallax .parallax-item-7 {
+    width: 100%;
+  }
+  .configParallax.items, #parallax .items.parallax-item-1, #parallax .items.parallax-item-2, #parallax .items.parallax-item-3, #parallax .items.parallax-item-4, #parallax .items.parallax-item-5, #parallax .items.parallax-item-6, #parallax .items.parallax-item-7 {
+    background-size: 100%;
+  }
+  .container-PP {
+    display: none;
+  }
+}
 #effects {
-  position: relative;
-  max-width: 100vw;
-  height: 100vh;
   background-color: #102040;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
@@ -235,9 +237,9 @@ main {
   background-color: #0D0C0C;
 }
 #effects .curve {
-  position: absolute;
   width: 100%;
   height: 100%;
+  position: absolute;
 }
 #effects .curve::before {
   content: "";
@@ -289,12 +291,83 @@ main {
     transform: translateY(-50%);
   }
 }
-footer {
-  height: 50vh;
+.effectPosition, #contact .social-media__effect__up, #contact .social-media__effect__down {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+#contact {
   position: sticky;
   bottom: 0;
-  z-index: -1;
-  background-color: aquamarine;
+  z-index: 1;
+  grid-template-rows: 1fr 0.1fr;
+  gap: 10px;
+  background-color: #30618C;
+}
+#contact .social-media {
+  width: 20rem;
+  height: 10rem;
+  position: relative;
+  padding: 10px;
+  justify-self: center;
+  align-self: center;
+  flex-direction: row;
+  column-gap: 50px;
+  border-radius: 20px;
+  box-shadow: inset 0 -6px 10px -8px rgba(0, 0, 0, 0.3), inset 0 6px 10px -8px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+}
+#contact .social-media__link {
+  color: #7f307a;
+  transition: 300ms;
+}
+#contact .social-media__effect {
+  width: 40%;
+  height: 100%;
+  transform: translateZ(0);
+  transition: transform 300ms, filter 150ms;
+}
+#contact .social-media__effect__up, #contact .social-media__effect__down {
+  background-color: white;
+  transition: 300ms;
+}
+#contact .social-media__effect__up {
+  clip-path: inset(0 0 50% 0);
+  border-radius: 20px;
+}
+#contact .social-media__effect__down {
+  clip-path: inset(50% 0 0 0);
+  border-radius: 20px;
+}
+#contact .social-media__effect:hover .social-media__effect__up {
+  transform: translateY(-50%) scale(1.2);
+}
+#contact .social-media__effect:hover .social-media__effect__down {
+  transform: translateY(50%) scale(1.2);
+}
+#contact .social-media__effect:hover .social-media__block {
+  position: absolute;
+  z-index: 10;
+}
+#contact .social-media__effect:hover .social-media__link {
+  color: #bf56b8;
+}
+#contact .copyright {
+  width: 80%;
+  margin: 0 auto;
+  border-radius: 20px;
+  border-top: 1px solid #F2E18D;
+  justify-self: end;
+}
+#contact .copyright p {
+  padding-top: 25px;
+  text-align: center;
+}
+@media screen and (max-width: 600px) {
+  #contact .copyright {
+    width: 100%;
+  }
 }
 
 * {
@@ -304,6 +377,10 @@ footer {
   padding: 0px;
   box-sizing: border-box;
   scroll-behavior: smooth;
+}
+
+.wrapper {
+  max-width: 100vw;
 }
 
 body::-webkit-scrollbar {
@@ -316,25 +393,39 @@ body::-webkit-scrollbar-thumb {
   background-color: #BF56B8;
   border-radius: 5px;
 }
-body main, body footer {
-  padding-left: 4rem;
+
+.displayUpper, main, #parallax, #effects {
+  position: relative;
+  z-index: 10;
+}
+
+.hundredWH, .parallax-container .container-PP label, .parallax-container .container-PP .play-pause, #contact .social-media__effect__up, #contact .social-media__effect__down {
+  width: 100%;
+  height: 100%;
+}
+
+.maxWidthHeight, main, #parallax, #effects, #contact {
+  max-width: 100vw;
+  max-height: 100vh;
+  height: 100vh;
 }
 
 a {
   text-decoration: none;
+  cursor: pointer;
 }
 
-p {
-  color: #BF56B8;
+ul {
+  list-style: none;
 }
 
-.flex-center, .nav .nav-ul, .nav .nav-ul .nav-li, .nav .nav-ul .nav-li .nav-link, .parallax-container .container-PP label {
+.flex-center, .nav .nav-ul, .nav .nav-ul .nav-li, .nav .nav-ul .nav-li .nav-link, .parallax-container .container-PP label, #contact .social-media, #contact .social-media__effect, #contact .social-media__effect__up, #contact .social-media__effect__down {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.grid, #effects {
+.grid, #effects, #contact {
   display: grid;
 }
 
