--- a/assets/sass/_effects.scss
+++ b/assets/sass/_effects.scss
@@ -7,9 +7,8 @@
 }
 
 #effects {
-    position: relative;
-    max-width: 100vw;
-    height: 100vh;
+    @extend .displayUpper;
+    @extend .maxWidthHeight;
 
     background-color: $back2-color;
 
@@ -23,9 +22,9 @@
     }
 
     .curve {
-        position: absolute;
         width: 100%;
         height: 100%;
+        position: absolute;
 
         &::before {
             content: "";
