--- a/assets/sass/_main.scss
+++ b/assets/sass/_main.scss
@@ -1,6 +1,6 @@
 main {
-    max-width: 100vw;
-    height: 100vh;
+    @extend .maxWidthHeight;
+    @extend .displayUpper;
 
     background-color: red;
 }
