--- a/assets/sass/base.scss
+++ b/assets/sass/base.scss
@@ -6,6 +6,7 @@ $found-color: #0E1B31;
 $lighthen: #F2B8A2;
 $nighten: #30618C;
 
+$transition-velocity: 300ms;
 
 @import  "_navbar", "_main", "_parallax", "_effects", "_footer";
 
@@ -22,6 +23,10 @@ $nighten: #30618C;
     scroll-behavior: smooth;
 }
 
+.wrapper {
+    max-width: 100vw;
+}
+
 body {
     &::-webkit-scrollbar {
         width: 0.25rem;
@@ -35,20 +40,34 @@ body {
         background-color: $font-color;
         border-radius: 5px;
     }
+}
 
-    main, footer {
-        padding-left: 4rem;
-    }
+.displayUpper {
+    position: relative;
+    z-index: 10;
+}
+
+.hundredWH {
+    width: 100%;
+    height: 100%;
+}
+
+.maxWidthHeight {
+    max-width: 100vw;
+    max-height: 100vh;
+
+
+    height: 100vh;
 }
 
 a {
     text-decoration: none;
+    cursor: pointer;
 }
 
-p {
-
-    color: $font-color;    
-} 
+ul {
+    list-style: none;
+}
 
 .flex-center {
     display: flex;
@@ -60,6 +79,9 @@ p {
     display: grid;
 }
 
+///////////////////////////////
+// Responsive, YES YES YES.
+///////////////////////////////
 
 @media screen and (max-width: 600px) {
     body {
