--- a/assets/sass/_navbar.scss
+++ b/assets/sass/_navbar.scss
@@ -1,4 +1,4 @@
-$transition-velocity: 300ms;
+
 
 .nav {
     width: 3rem;
@@ -13,12 +13,16 @@ $transition-velocity: 300ms;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
 
-    background-color: $font-color;
+    background-color: transparent;
 
-    transition: width 200ms ease-in-out;
+    transition: all 200ms ease-in-out;
 
     &:hover {
         width: 5rem;
+
+        box-shadow: 4px 0px 10px rgba(255, 255, 255, 0.1);
+        background-color: mix(rgba(0, 0, 0, 0.1), $back-color, 50%);
+        
     }
 
     .nav-ul {
@@ -32,7 +36,7 @@ $transition-velocity: 300ms;
         .nav-li {
             position: relative;
             width: 100%;
-            height: 80px;
+            height: 88px;
     
             @extend .flex-center;
     
@@ -43,8 +47,6 @@ $transition-velocity: 300ms;
                 background-color: $back-color;
     
                 .nav-link {
-                    filter: grayscale(0) opacity(1);
-    
                     .nav-text {
                         left: 6rem;
                         opacity: 1;
@@ -53,25 +55,25 @@ $transition-velocity: 300ms;
                     }
 
                     .nav-icon {
-                        color: $font-color;
+                        color: darken($font-color, 0%);
                     }
                 }
             }  
     
             .nav-link {
-                height: 50px;
+                width: 100%;
+                height: 100%;
         
-                color: $back2-color;
-                filter: grayscale(100%) opacity(0.5);
+                color: $back-color;
+                
                 @extend .flex-center;
-    
-                transition: $transition-velocity;
     
                 .nav-text {
                     position: absolute;
-                    top: 10px;
+                    top: 50%;
                     left: 0;
-                    //z-index: 100;
+
+                    transform: translateY(-50%);
         
                     padding: 5px 8px;
             
@@ -92,15 +94,16 @@ $transition-velocity: 300ms;
                         height: 8px;
                         width: 8px;
                         background: $font-color;
-                        top: 40%;
+                        top: 50%;
                         left: -3px;
-                        transform: rotate(45deg);
+                        transform: translateY(-50%) rotate(45deg);
                         transition: all 3$transition-velocity cubic-bezier(0.68, -0.55, 0.265, 1.55);
                     }
                 }
     
                 .nav-icon {
-                    color: $back2-color;
+                    color: darken($font-color, 30%);
+                    transition: $transition-velocity;
                 }
             }
         }
@@ -113,7 +116,7 @@ $transition-velocity: 300ms;
 
 @media screen and (max-width: 600px) {
     .nav {
-        width: 100%;
+        width: 100vw;
         height: 5vh;
 
         border-top-right-radius: 0;
@@ -123,6 +126,12 @@ $transition-velocity: 300ms;
 
         &:hover{
             width: 100%;
+
+            /* OLD */
+            box-shadow: 0px 4px 10px rgba(255, 255, 255, 0.1);
+            background-color: rgba(0, 0, 0, 0.1);
+
+            /* NEW */
         }
 
         .nav-ul {
