--- a/assets/sass/base.scss
+++ b/assets/sass/base.scss
@@ -1,8 +1,15 @@
-$font-color: #F2EC99; 
-$font2-color: #BFB169; 
-$font3-color: #A69668; 
+$font-color: #BF56B8; 
+$font2-color: #F2E18D; 
 $back-color: #0D0C0C;
-$back2-color: #262423;
+$back2-color: #102040;
+$found-color: #0E1B31;
+$lighthen: #F2B8A2;
+$nighten: #30618C;
+
+$transition-velocity: 300ms;
+
+@import  "_navbar", "_main", "_parallax", "_portfolio", "_footer";
+
 
 * {
     font-family: 'hack-font', sans-serif;
@@ -16,6 +23,10 @@ $back2-color: #262423;
     scroll-behavior: smooth;
 }
 
+.wrapper {
+    max-width: 100vw;
+}
+
 body {
     &::-webkit-scrollbar {
         width: 0.25rem;
@@ -27,21 +38,36 @@ body {
 
     &::-webkit-scrollbar-thumb {
         background-color: $font-color;
+        border-radius: 5px;
     }
+}
 
-    main, footer {
-        padding-left: 4rem;
-    }
+.displayUpper {
+    position: relative;
+    z-index: 10;
+}
+
+.hundredWH {
+    width: 100%;
+    height: 100%;
+}
+
+.maxWidthHeight {
+    max-width: 100vw;
+    max-height: 100vh;
+
+
+    height: 100vh;
 }
 
 a {
     text-decoration: none;
+    cursor: pointer;
 }
 
-p {
-
-    color: $font-color;    
-} 
+ul {
+    list-style: none;
+}
 
 .flex-center {
     display: flex;
@@ -49,8 +75,13 @@ p {
     align-items: center;
 }
 
+.grid {
+    display: grid;
+}
 
-@import  "_navbar", "_main", "parallax", "_footer";
+///////////////////////////////
+// Responsive, YES YES YES.
+///////////////////////////////
 
 @media screen and (max-width: 600px) {
     body {
