--- a/assets/sass/_navbar.scss
+++ b/assets/sass/_navbar.scss
@@ -1,5 +1,3 @@
-
-
 .nav {
     width: 3rem;
     height: 100vh;
@@ -61,8 +59,7 @@
             }  
     
             .nav-link {
-                width: 100%;
-                height: 100%;
+                @extend .hundredWH;
         
                 color: $back-color;
                 
@@ -116,22 +113,21 @@
 
 @media screen and (max-width: 600px) {
     .nav {
-        width: 100vw;
+        width: 100%;
         height: 5vh;
 
         border-top-right-radius: 0;
-        border-bottom-right-radius: 0;
         border-bottom-right-radius: 10px;
         border-bottom-left-radius: 10px;
 
-        &:hover{
-            width: 100%;
+        box-shadow: 0px 4px 10px rgba(255, 255, 255, 0.1);
+        background-color: rgba(0, 0, 0, 0.1);
 
-            /* OLD */
+        &:hover {
+            width: 100%;
+    
             box-shadow: 0px 4px 10px rgba(255, 255, 255, 0.1);
             background-color: rgba(0, 0, 0, 0.1);
-
-            /* NEW */
         }
 
         .nav-ul {
