--- a/assets/sass/_main.scss
+++ b/assets/sass/_main.scss
@@ -1,6 +1,169 @@
-main {
+#about {
     @extend .maxWidthHeight;
     @extend .displayUpper;
 
-    background-color: red;
+    background-color: $found-color;
+
+    .about {
+        &__container {
+            @extend .hundredWH;
+            @extend .flex-center;
+            flex-direction: row;
+
+            &__text {
+                width: 50%;
+                height: 100%;
+                padding-left: 5rem;
+                
+                @extend .flex-center;
+                justify-content: flex-start;
+    
+                background-color: $found-color;
+
+                h1 {
+                    color: darken($font-color, 30%);
+
+                    font-size: 3em;
+
+                    @media (max-width: 800px) {
+                        font-size: 3em;
+                    }
+
+                    @media (max-width: 743px) {
+                        font-size: 3em;
+                    }
+                }
+
+                &__effect {
+                    position: relative;
+                    font-size: 1em;
+
+                    color: transparent;
+                    -webkit-text-stroke: 1px #383d52;
+
+                    &::before {
+                        content: attr(data-text);
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        width: 0;
+                        height: 100%;
+                        color: $font-color;
+                        -webkit-text-stroke: 0px #383d52;
+                        overflow: hidden;
+
+                        animation: textAnimation 6s cubic-bezier(.1,1.2,1,.76) infinite;
+                    }
+                }
+            }
+    
+            &__image {
+                width: 50%;
+                height: 40rem;
+
+                align-self: flex-start;
+    
+                @extend .flex-center;
+                flex-direction: column;
+                row-gap: 10px;
+
+                border-top-left-radius: 50%;
+                border-bottom-left-radius: 50%;
+
+                box-shadow: inset 0 -6px 10px -8px black, inset 0 6px 10px -8px black;
+    
+                background-color: $back2-color;
+    
+                img {
+                    width: 30rem;
+                    height: 30rem;
+    
+                    border-radius: 50%;
+    
+                    object-fit: cover;
+    
+                    @media (max-width: 1200px) {
+                        width: 20rem;
+                        height: 20rem;
+                    }
+    
+                    @media (max-width: 740px) {
+                        width: 15rem;
+                        height: 15rem;
+                    }
+                }
+
+                @media (max-width: 1200px) {
+                    height: 30rem;
+                }
+
+                @media (max-width: 740px) {
+                    height: 30rem;
+                }
+
+                &__socialMedia {
+                    i {
+                        margin: 10px;
+                        color: darken($font-color, 20%);
+
+                        transition: scale 200ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+
+                        &:hover {
+                            color: darken($font-color, 0);
+                            scale: 1.2;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+///////////////////////////////
+// Animations, YES YES YES.
+///////////////////////////////
+@keyframes textAnimation {
+    0%, 10%, 100% {
+        width: 0;
+    }
+
+    70%, 90% {
+        width: 100%;
+    }
+}
+
+
+///////////////////////////////
+// Responsive, YES YES YES.
+///////////////////////////////
+
+@media screen and (max-width: 600px) {
+    #about {
+        .about {
+            &__container {
+                height: 100vh;
+                flex-direction: column;
+                
+                &__text {
+                    width: 100%;
+                    height: 100%;
+                    padding-left: 0;
+
+                    font-size: 1.5em;
+
+                    justify-content: center ;
+                }
+
+                &__image {
+                    width: 100%;
+                    height: 100%;
+
+                    border-top-left-radius: 0%;
+                    border-bottom-left-radius: 0%;
+                    
+                    box-shadow: inset 0 0px 0px 0px black, inset 0 6px 10px -8px black;
+                }
+            }
+        }
+    }
 }
