--- a/assets/sass/_portfolio.scss
+++ b/assets/sass/_portfolio.scss
@@ -9,7 +9,7 @@
     grid-template-rows: 1fr;
     gap: 10px;
     
-    h1 {
+    .portfolio__tittle {
         color: $font2-color;
         @extend .displayUpper;
         justify-self: center;
@@ -18,9 +18,29 @@
     }
 
     .portfolio {
+        &__text {
+            height: 70%;
+            @extend .flex-center;
+
+            border-top-right-radius: 50%;
+            border-bottom-right-radius: 50%; 
+            
+            box-shadow: inset 0 -6px 10px -8px lighten($back2-color, 20%), inset 0 6px 10px -8px lighten($back2-color, 20%);
+            
+            background-color: $back2-color;
+
+            @media (max-width: 600px) {
+                border-top-right-radius: 0;
+                border-bottom-left-radius: 50%; 
+
+                box-shadow: inset 0 -6px 10px -8px lighten($back2-color, 10%);
+            }
+        }
+
         &__container {
             width: 100%;
             height: 100%;
+
             padding: 20px;
             @extend .grid;
             grid-template-rows: repeat(2, 1fr);
@@ -29,7 +49,6 @@
         }
 
         &__card {
-            position: relative;
             opacity: .5;
 
             @extend .grid;
@@ -40,22 +59,20 @@
 
             cursor: pointer;
 
+            box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
+            border-radius: 20px;
+            background-color: rgba(255, 255, 255, 0.1);
+            border-top: 1px solid rgba(255, 255, 255, 0.5);
+            border-left: 1px solid rgba(255, 255, 255, 0.5);
+
             transition: opacity 200ms;
 
-            &::before {
-                content: "";
-                position: absolute;
-                top: 0;
-                left: 0;
-                z-index: -1;
-                @extend .hundredWH;
-
-
-                border-right: 2px solid $font2-color;
-                border-bottom: 2px solid $font2-color;
+            @media (max-width: 930px) {
+                height: 300px;
             }
 
             .figure-1 {
+                width: 100%;
                 background: url("../image/GH/LS.png");
                 @extend .image-config;
                 
@@ -91,11 +108,11 @@
                 }
 
                 &:hover {
-                    transform: scale(1);
+                    transform: scale(0.9);
                 }
             }
 
-            h2 {
+            &__tittle {
                 align-self: center;
                 text-align: center;
                 color: $font2-color;
@@ -126,10 +143,15 @@
         grid-template-columns: 1fr;
         grid-template-rows: 100px 2fr;
 
-        h1 {
+        .portfolio__tittle {
             justify-self: center;
             align-self: center;
             font-size: 2em;
+        }
+
+        .portfolio__card {
+            height: 300px;
+            align-self: flex-end;
         }
     }
 }
