--- a/assets/sass/_portfolio.scss
+++ b/assets/sass/_portfolio.scss
@@ -1,13 +1,9 @@
 #portfolio {
     @extend .displayUpper;
-    @extend .maxWidthHeight;
+    width: 100%;
+    height: auto;
 
     background-color: $found-color;
-
-    @extend .grid;
-    grid-template-columns: 1fr 3fr;
-    grid-template-rows: 1fr;
-    gap: 10px;
     
     .portfolio__tittle {
         color: $font2-color;
@@ -19,41 +15,32 @@
 
     .portfolio {
         &__text {
-            height: 70%;
+            height: 70px;
             @extend .flex-center;
 
-            border-top-right-radius: 50%;
-            border-bottom-right-radius: 50%; 
+            border-bottom-left-radius: 50%;
+            border-bottom-right-radius: 50%;  
             
-            box-shadow: inset 0 -6px 10px -8px lighten($back2-color, 20%), inset 0 6px 10px -8px lighten($back2-color, 20%);
+            box-shadow: inset 0 -6px 10px -8px black, inset 0 6px 10px -8px black;
             
             background-color: $back2-color;
 
             @media (max-width: 600px) {
-                border-top-right-radius: 0;
-                border-bottom-left-radius: 50%; 
-
-                box-shadow: inset 0 -6px 10px -8px lighten($back2-color, 10%);
+                box-shadow: inset 0 -6px 10px -8px black, inset 0 0px 0px 0px black;
             }
         }
 
         &__container {
-            width: 100%;
-            height: 100%;
-
             padding: 20px;
-            @extend .grid;
-            grid-template-rows: repeat(2, 1fr);
-            grid-template-columns: repeat(2, 1fr);
-            gap: 10px;
         }
 
         &__card {
+            margin-top: 10px;
             opacity: .5;
 
             @extend .grid;
             grid-template-columns: 1fr;
-            grid-template-rows: 2fr .5fr 0.5fr;
+            grid-template-rows: 6fr .5fr 0.5fr;
             gap: 10px;
             padding: 10px;
 
@@ -150,8 +137,8 @@
         }
 
         .portfolio__card {
-            height: 300px;
-            align-self: flex-end;
+            height: 200px;
+            align-self: center;
         }
     }
 }
